--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,13 @@ dependencies:
   intl: any
   provider: ^6.1.1
   shared_preferences: ^2.2.2
+  flutter_launcher_icons: ^0.13.1
+
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/logo2.png"
 
 dev_dependencies:
   flutter_test:
@@ -83,6 +90,12 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+
+  fonts:
+    - family: Amiri
+      fonts:
+        - asset: assets/fonts/Amiri-Bold.ttf
+
   # fonts:
   #   - family: Schyler
   #     fonts:
